[style] new ui with rotated buttons and stuff

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <section class="container" id="container">
+      <button class="button play" id="play"></button>
       <div class="buttons">
-        <button class="button prev" id="prev">PREV</button>
-        <button class="button play" id="play">PLAY</button>
-        <button class="button next" id="next">NEXT</button>
+        <button class="button prev" id="prev"></button>
+        <button class="button next" id="next"></button>
       </div>
-      <input class="button" id="volume" type="range"/>
+      <input class="button vol" id="volume" type="range"/>
     </section>
 
     <script src="lib/jquery.min.js"></script>
