[ui] rm prev button, fewer colors, style fixes, [change] to touchend events

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
   <body>
     <section class="container" id="container">
       <button class="button play" id="play"></button>
-      <div class="buttons">
-        <button class="button prev" id="prev"></button>
-        <button class="button next" id="next"></button>
+      <button class="button next" id="next"></button>
+      <div class="volume-container">
+        <input class="volume" id="volume" type="range"/>
       </div>
-      <input class="button vol" id="volume" type="range"/>
     </section>
 
     <script src="lib/jquery.min.js"></script>
