[update] to new api, [add] pause button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <section class="container" id="container">
       <button class="button play" id="play"></button>
+      <button class="button pause" id="pause"></button>
       <button class="button next" id="next"></button>
       <div class="volume-container">
         <input class="volume" id="volume" type="range"/>
