--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <section class="container" id="container">
-      <button class="button play" id="play"></button>
       <button class="button pause" id="pause"></button>
+      <button class="button reset" id="reset"></button>
       <button class="button next" id="next"></button>
       <div class="volume-container">
         <input class="volume" id="volume" type="range"/>
